# megatools

./: INSTALL  Makefile.am  NEWS  TODO  configure.ac
docs/: megals.txt  megareg.txt  megatools.txt  shared-options.txt
mega/: Makefile.am  mega-aes-ctr-encryptor.c  mega-aes-key.c  mega-api.c  mega-api.h  mega-chunked-cbc-mac.c  mega-file-key.c  mega-filesystem.c  mega-filesystem.h  mega-http-client.c  mega-http-client.h  mega-http-input-stream.c  mega-http-io-stream.c  mega-http-output-stream.c  mega-node.c  mega-node.h  mega-rsa-key.c  mega-rsa-key.h  mega-session.c  mega-session.h  mega.h  private-utils.h  utils.c  utils.h
tests/: test-api.js  test-api.sh
tests/tools/: 00-test-reg.sh
tools/: Makefile.am  df.c  ls.c  reg.c  tools.c  tools.h
tools/libtools/: oldmega.c  oldmega.h
